--- a/website/frontend/src/index.css
+++ b/website/frontend/src/index.css
@@ -1,10 +1,35 @@
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+nav{
+  position: fixed;
+  width: 100%;
+  margin: 25px auto;
+  z-index: 100;
+}
+.banner{
+  position: relative;
+  overflow: hidden;
+  height: 100vh;
+  display: -webkit-flex;
+  display: moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  align-items: flex-end;
+  background: #fff;
+}
+.banner img{
+  width: 100%;
+  height: 100vh;
+  
 }
 
 code {
