--- a/website/frontend/src/index.css
+++ b/website/frontend/src/index.css
@@ -6,30 +6,63 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
 }
 
-nav{
+html, #root {
+  height: 100%; /* Ensures the root element takes up the full height */
+  position: relative;
+  z-index: 1;
+}
+
+nav {
   position: fixed;
   width: 100%;
   margin: 25px auto;
   z-index: 100;
 }
-.banner{
-  position: relative;
-  overflow: hidden;
-  height: 100vh;
-  display: -webkit-flex;
-  display: moz-flex;
-  display: -ms-flex;
-  display: -o-flex;
-  display: flex;
-  align-items: flex-end;
-  background: #fff;
-}
-.banner img{
+
+.banner {
+  position: fixed; /* Makes the banner fixed as a background */
+  top: 0;
+  left: 0;
   width: 100%;
-  height: 100vh;
-  
+  height: 100%;
+  z-index: -1; /* Moves the banner behind the content */
+  overflow: hidden;
+}
+
+.banner img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ensures the images cover the entire background */
+  position: absolute;
+  backface-visibility: hidden;
+  opacity: 0;
+  transform: scale(1.2) rotate(15deg);
+  animation: animate 20s infinite;
+}
+
+.banner img:nth-child(3) {
+  animation-delay: 5s;
+}
+
+.banner img:nth-child(2) {
+  animation-delay: 10s;
+}
+
+.banner img:nth-child(1) {
+  animation-delay: 15s;
+}
+
+@keyframes animate {
+  25% {
+    opacity: 1;
+    transform: scale(1) rotate(0);
+  }
+  50% {
+    opacity: 0;
+  }
 }
 
 code {
